# VersaSens

./: README.md
VersaSens_Casing/: README.md
VersaSens_Casing/Design_Compact/: Description_Design_Compact.txt  VersaSens_Design_Compact.step  VersaSens_Design_Compact_back_latch.stl  VersaSens_Design_Compact_front.stl
VersaSens_Casing/Design_Distributed/: Description_Design_Distributed.txt  EDA_back.stl  EDA_front.stl  Main_front.stl  PPG_back.stl  (+3 more)
VersaSens_FW/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  pm_static.yml  prj.conf
VersaSens_FW/boards/: nrf5340dk_nrf5340_cpuapp.overlay  pinctrl.dtsi
VersaSens_FW/child_image/: hci_rpmsg.conf  hci_rpmsg.overlay
VersaSens_FW/python_notebook/: .gitignore  VersaSens_data_visualisation.ipynb
VersaSens_FW/src/: main.c
VersaSens_FW/src/VersaAPI/: sensors_list.h  versa_api.c  versa_api.h  versa_config.h
VersaSens_FW/src/drivers/: ADS1298.c  ADS1298.h  BNO086.c  BNO086.h  MAX30001.c  MAX30001.h  MAX77658.c  MAX77658.h  MAX86178.c  MAX86178.h  MLX90632.c  MLX90632.h  T5838.c  T5838.h  spim_inst.c  spim_inst.h  storage.c  storage.h  thread_config.h  twim_inst.c  twim_inst.h  versa_ble.c  versa_ble.h  versa_time.c  versa_time.h
VersaSens_FW/src/testbench/: BNO086_tb.c  MAX77658_tb.c  MLX90632_tb.c  T5838_tb.c  flash_tb.c  test_led.c
VersaSens_HW/: ECG_PPG.kicad_sch  EDA.kicad_sch  EMG.kicad_sch  Expansion.kicad_sch  Main.kicad_sch  PPG.kicad_sch  README.md  VersaHeepo.kicad_sch  VersaSens_HeEx.kicad_prl  VersaSens_HeEx.kicad_pro  VersaSens_HeEx.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
(+162 files in other folders)
